# finger-vascular-biometry

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  camera_test.cpp  security_system.cpp
cad/3d/: pcb.stl  prototipo TFG - bottom cover.stl  prototipo TFG - cover.stl  prototipo TFG - finger.stl  prototipo TFG - leds.stl  prototipo TFG - main.stl
include/finger_vascular_biometry/: DBHandler.hpp  biometry.hpp
include/security_system/: config.h.in  security_system.hpp
resources/: database.db
src/: CMakeLists.txt  DBHandler.cpp  biometry.cpp  cvprog.cpp
ui/: security_system.ui
